tests/neg-custom-args/isInstanceOf/i3324.scala
class Foo {
  def foo(x: Any): Boolean =
    x.isInstanceOf[List[String]]  // error
}
